Fri Apr 26 18:41:04 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Use a block of enable_config() for
	  --{enable,disable}-close-fds-by-recvmsg-with-peek configure option

Fri Apr 26 18:08:08 2013  Tanaka Akira  <akr@fsij.org>

	* dir.c (dir_set_pos): Fix a compilation error when seekdir() is not
	  exist.

Fri Apr 26 17:41:17 2013  Tanaka Akira  <akr@fsij.org>

	* thread_pthread.c (ruby_init_stack): Add STACK_GROW_DIR_DETECTION.
	  This fixes a compilation failure while cross-compiling for ARM.

Fri Apr 26 14:35:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/rss/atom.rb: Documentation for RSS::Atom based on a patch by
	  Michael Denomy
	* lib/rss/maker.rb: Documentation for RSS::Maker also by @mdenomy

Fri Apr 26 12:41:22 2013  Tanaka Akira  <akr@fsij.org>

	* ext/curses/extconf.rb: Test linkability of curses_version at first.

	* ext/socket/extconf.rb: Test the behavior of fd passing with MSG_PEEK
	  only if recvmsg(), msg_control member, AF_UNIX and SCM_RIGHTS are
	  available.

Fri Apr 26 00:07:52 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* lib/rinda/ring.rb (Rinda::RingServer#initialize): accept array
	  arguments of address to specify multicast interface.

	* lib/rinda/ring.rb (Rinda::RingServer#make_socket): add optional
	  arguments for multicast interface.

	* test/rinda/test_rinda.rb
	  (TestRingFinger#test_ring_server_ipv4_multicast,
	   TestRingFinger#test_ring_server_ipv6_multicast): add tests for
	  above change.

	* test/rinda/test_rinda.rb
	  (TestRingServer#test_make_socket_ipv4_multicast,
	   TestRingServer#test_make_socket_ipv6_multicast): change bound
	  interface address because multicast address is not allowed on Linux
	  or Windows.
	  [ruby-core:53692] [Bug #8159]

Thu Apr 25 23:45:02 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* lib/rinda/ring.rb (Rinda::RingServer#initialize): add a socket
	  to @sockets in make_socket() to close sockets on shutdown even if